fixed responsive alignment

--- a/style/style.css
+++ b/style/style.css
@@ -60,13 +60,11 @@ body {
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 800px) {
     .leftcolumn {
-        padding: 2%;
-        width: 95%;
+        width: 100%;
     }
 
     .rightcolumn {
         float: none;
-        padding: 2%;
-        width: 95%;
+        width: 100%;
     }
 }
